--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,7 +9,7 @@
 /* ======= Base ======= */
 body {
   font-family: 'Lato', arial, sans-serif;
-  color: #434343;
+  color: #ffffff;
   background: #ffffff;
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
