--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -114,8 +114,8 @@ iframe {
 /* ======= Header ======= */
 .header {
   padding: 30px 0;
-  background: #f5f5f5;
-  border-top: 10px solid #778492;
+  background: #ffffff;
+  border-top: 10px solid #ffffff;
 }
 .header .btn {
   margin-top: 60px;
