--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,8 +9,8 @@
 /* ======= Base ======= */
 body {
   font-family: 'Lato', arial, sans-serif;
-  color: #333131;
-  background: #ffffff;
+  color: #434343;
+  background: #dae3e7;
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -114,8 +114,8 @@ iframe {
 /* ======= Header ======= */
 .header {
   padding: 30px 0;
-  background: #ffffff;
-  border-top: 10px solid #ffffff;
+  background: #f5f5f5;
+  border-top: 10px solid #dae0e6;
 }
 .header .btn {
   margin-top: 60px;
