--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,8 +9,8 @@
 /* ======= Base ======= */
 body {
   font-family: 'Lato', arial, sans-serif;
-  color: #434343;
-  background: #dae3e7;
+  color: #0c0b0b;
+  background: #e1e1e1;
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
