--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,10 +9,11 @@
 /* ======= Base ======= */
 body {
   font-family: 'Lato', arial, sans-serif;
-  color: #0c0b0b;
-  background: #e1e1e1;
+  color: #434343;
+  background: #dae3e7;
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 h1,
 h2,
@@ -114,7 +115,7 @@ iframe {
 .header {
   padding: 30px 0;
   background: #f5f5f5;
-  border-top: 10px solid #dae0e6;
+  border-top: 10px solid #778492;
 }
 .header .btn {
   margin-top: 60px;
